--- a/src/Chat/pages/Chat.css
+++ b/src/Chat/pages/Chat.css
@@ -124,7 +124,7 @@
 .chat-box-section{
     height: 100vh;
  
-    background-image: url('images/fondo2.jpeg');
+    background-image: url('images/fondo.webp');
     background-size: cover;
     background-repeat: no-repeat; 
     background-attachment: fixed; 
